Retrieve_Issue_Change_Log_History:  * Adding ability to retrieve Issue Change Log history items (such as remaining time estimates recorded when work is logged).

--- a/Jira.SDK/Jira.SDK.csproj
+++ b/Jira.SDK/Jira.SDK.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Domain\AgileBoard.cs" />
     <Compile Include="Domain\AgileBoardView.cs" />
+    <Compile Include="Domain\ChangeLog.cs" />
     <Compile Include="Domain\CustomField.cs" />
     <Compile Include="Domain\Epic.cs" />
     <Compile Include="Domain\Field.cs" />
